--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ plugins: ./_plugins
 google_analytics: "'UA-45998043-1'"
 use_analytics: true
 
-paper_content_url: http://data.caleydo.org/papers/
+paper_content_url: http://sci.utah.edu/~vdl/papers/
 
 # Build settings
 markdown: kramdown
