fixed image links

--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 title: Visualization Design Lab
 email: alex@sci.utah.edu
 description: "Data visualization research lab at SCI, SoC, University of Utah"
-baseurl: ""
-url: "http://visdesignlab.github.io"
+baseurl: "http://www.sci.utah.edu/~nmccurdy/_site/"
+url: "http://www.sci.utah.edu"
 twitter_username:
 github_username: visdesignlab
 youtube_username:
