remove accidental commit of baseURL

--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 title: Visualization Design Lab
 email: alex@sci.utah.edu
 description: "Data visualization research lab at SCI, SoC, University of Utah"
-baseurl: "http://www.sci.utah.edu/~nmccurdy/_site/"
+baseurl: ""
 url: "http://www.sci.utah.edu"
 twitter_username:
 github_username: visdesignlab
