--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: Visualization Design Lab
-email: alex@sci.utah.edu
+email: vdl-faculty@sci.utah.edu
 description: "Data visualization research lab at SCI, SoC, University of Utah"
 baseurl: ""
 url: "http://www.vdl.sci.utah.edu"
