--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,8 @@ use_analytics: true
 
 paper_content_url: http://sci.utah.edu/~vdl/papers/
 
-
+gems:
+  - jekyll-redirect-from
 
 # Build settings
 markdown: kramdown
