fixed broken url

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@ title: Visualization Design Lab
 email: vdl-faculty@sci.utah.edu
 description: "Data visualization research lab at SCI, SoC, University of Utah"
 baseurl: ""
-url: "http://www.vdl.sci.utah.edu"
+url: "http://vdl.sci.utah.edu"
 twitter_username:
 github_username: visdesignlab
 youtube_username:
