stub for projects, outline for CAREER

--- a/_config.yml
+++ b/_config.yml
@@ -36,8 +36,8 @@ collections:
     output: false
   institutions:
     output: false
-  funding:
-    output: false
+  projects:
+    output: true
   talks:
     output: false
 
