--- a/.github/workflows/linkcheck.yml
+++ b/.github/workflows/linkcheck.yml
@@ -15,7 +15,7 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Setup ruby 2.7
-        uses: actions/setup-ruby@v1
+        uses: ruby/setup-ruby@v1
         with:
           ruby-version: 2.7
 
@@ -23,7 +23,7 @@ jobs:
         run: | 
           gem install jekyll
           gem install jekyll-redirect-from
-          gem install htmlproofer
+          gem install html-proofer
 
       - name: Build jekyll website
         run: jekyll build
