Update google analytics to GA4

--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ facebook_page:
 photos: "https://photos.google.com/share/AF1QipOiyDMtNW04qkwUVlFvbdpHKLOaFtXiq-UTEjlCd9lLzESfwSkDFsjss6F8cozTVw?key=RmM2dnVTVWk3eTEySE9HQWxLcGdzZ3dTQ3pNTmpR"
 safe: false
 lsi: false
-google_analytics: "UA-69348306-1"
+google_analytics: "G-M0JZQWVNF5"
 use_analytics: true
 # publications are shown as recent on the front page for years strictly great than this year
 recent_pub_year: 2020
